
add_executable(0001_BOJ_05_BFS_2178_BOJ 0001_BOJ/05_BFS/2178_BOJ.cpp 0001_BOJ/PrefixSum/2851_BOJ.cpp
        0004_DataStructure/02_LinkedList/02_CreateDestroyNode_ListPractice.cpp
        0004_DataStructure/02_LinkedList/00_cut_corners_list.cpp
        0004_DataStructure/01_array/01_array_test.cpp
        0001_BOJ/PrefixSum/23827_boj.cpp
        0004_DataStructure/02_LinkedList/04_AddandDeletionNode_LinkedList.cpp
        0004_DataStructure/02_LinkedList/03_CreateDestroyNode_Typeof_List.cpp
        0004_DataStructure/01_array/03_change_value.cpp
        0004_DataStructure/01_array/02_array.cpp
        0004_DataStructure/01_array/00_ArrayPractice.cpp
)
add_executable(0004_DataStructure_02_LinkedList_00_ListPractice 0004_DataStructure/02_LinkedList/02_CreateDestroyNode_ListPractice.cpp)
add_executable(0001_BOJ_PrefixSum_23827_boj 0001_BOJ/PrefixSum/23827_boj.cpp)
add_executable(0004_DataStructure_02_LinkedList_02_CreateDestroyNode_ListPractice 0004_DataStructure/02_LinkedList/02_CreateDestroyNode_ListPractice.cpp)
add_executable(0004_DataStructure_01_array_00_ArrayPractice 0004_DataStructure/01_array/00_ArrayPractice.cpp)